2005-01-05  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Re-order declarations to match the order used in the 
	  C99 Standard Annex B; Complete <stdio.h> exports (except for those not
	  worth supporting); Add non-"unsafe" versions of fread(3), fwrite(3) and
	  add some rudimentary buffer-overflow checking; Add <stdlib.h> exports such
	  as getenv(3), exit(3), rand(3), EXIT_SUCCESS, RAND_MAX, etc.

2005-01-03  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Update endfsent() and setfsent() declarations, as these must
	  now be implemented in MonoPosixHelper.

2005-01-01  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs, Syscall.cs: Minimize duplicate declarations of
	  "MonoPosixHelper" for use in DllImport statements.

2005-01-01  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Don't use C# v2 features; fixes build under CSC.EXE.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: On miguel's suggestion, rename Sighandler_t to SignalHandler.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Implement all C89 <stdio.h> functions except for the scanf(3)
	  family.  These are too dangerous to expose.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* CdeclFunctions.cs: Remove warning about unused variable.
	* Stdlib.cs: Make signal(2) sane and (hopefully) complete.
	* Syscall.cs: Fix cuserid Obsolete message to reference correct class name.
	* UnixProcess.cs: Remove warning about unused variable.
	* UnixMarshal.cs: Remove warnings about unused variables.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadSymbolicLink(), which takes an intelligent approach
	  to reading symlinks (since their contents may be any size, we grow the
	  buffer dynamically to fit them all, instead of assuming a maximum size).
	* UnixSymbolicLinkInfo.cs: Remove MaxContentsSize.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add check for when symlink points to a full path name.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>
